Details
-
Bug
-
Resolution: Done
-
P0: Blocker
-
5.8.0 RC
-
Win MSVC
-
019c932ca9bf7c274fd8a402c2af200b5b0cbc59
Description
Latest binaries build for Qt5.8 01-Dec-2016, used in qt-enterprise-windows-x86-msvc2013-5.8.0-rc_670.exe
Translations missing for MSVC (desktop and WinRT/WinPhone) and MinGW. Linux and macOS targets have those, as well as QNX and Android on windows.
MSVC had translations in previous build done in 17-Nov-2016 (enterprise installer #641).
Attachments
Issue Links
- mentioned in
-
Page Loading...
For Gerrit Dashboard: QTBUG-57423 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
178850,3 | unbreak "aux" template for mingw & msvc, take 3 | 5.7 | qt/qtbase | Status: MERGED | +2 | 0 |
181691,2 | unbreak "aux" template for mingw & msvc, take 3 | 5.6 | qt/qtbase | Status: MERGED | +2 | 0 |